# quadruped_drake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  helpers.py  simulate.py  solve_trunk_mpc.cpp  test.cpp  trunk_mpc.cpp
controllers/: __init__.py  basic_controller.py  clf_controller.py  inverse_dynamics_controller.py  mptc_controller.py  passivity_controller.py  pc_controller.py  qp_controller.py
lcm/: example_t.lcm
lcm/exlcm/: example_t.hpp  example_t.py
lcm_types/: leg_control_command_lcmt.lcm  leg_control_data_lcmt.lcm  robot_state_control_lcmt.lcm  trunk_state_t.lcm  trunk_trajectory_t.lcm
lcm_types/cheetahlcm/: __init__.py  leg_control_command_lcmt.hpp  leg_control_command_lcmt.py  leg_control_data_lcmt.hpp  robot_state_control_lcmt.hpp  robot_state_control_lcmt.py
lcm_types/exlcm/: __init__.py
lcm_types/trunklcm/: __init__.py  trunk_state_t.hpp  trunk_state_t.py
models/anymal_b_simple_description/: README.md
models/anymal_b_simple_description/urdf/: anymal_drake.urdf  anymal_drake_no_collision.urdf
models/mini_cheetah/: mini_cheetah_mesh.urdf  mini_cheetah_simple_v2.urdf
planners/: __init__.py  simple.py  towr.py
towr/: CMakeLists.txt  trunk_mpc.cpp
towr/cmake/: towr-config.cmake
towr/include/towr/: nlp_formulation.h  parameters.h
towr/include/towr/models/: robot_model.h
towr/include/towr/models/examples/: anymal_model.h  mini_cheetah_model.h
towr/src/: nlp_formulation.cc  robot_model.cc
